@@ -12,6 +12,10 @@ What's New in Python 2.3 release candidate 2?
 Core and builtins
 -----------------
 
+- It is now possible to import from zipfiles containing additional
+  data bytes before the zip compatible archive. Zipfiles containing a
+  comment at the end are still unsupported.
+
 Extension modules
 -----------------
 
